--- a/css/equipos.css
+++ b/css/equipos.css
@@ -1,234 +1,402 @@
+/* Menu Principal */
+/* MENU */
+.nombrePagina {
+  margin-top: 12rem;
+}
 
+.novedades__section--h2 h2 {
+  color: var(--celeste);
+  text-align: center;
+  margin: 2rem auto;
+}
+
+.novedades__article {
+  border-top: 1px solid var(--gris);
+  border-bottom: 1px solid var(--gris);
+  height: 20rem;
+  padding: 2rem;
+  overflow: hidden;
+}
+.novedades__article div {
+  float: left;
+}
+.novedades__article div img {
+  margin: 1rem;
+}
+.novedades__article .novedades__article--noticia {
+  margin: 0 5rem;
+}
+.novedades__article .novedades__article--noticia .novedades__article--violeta {
+  font-weight: bold;
+  color: var(--violetaOscuro);
+}
+.novedades__article .novedades__article--noticia h3 {
+  color: var(--negro);
+  margin: -1rem auto;
+}
+.novedades__article .novedades__article--noticia h4 {
+  color: var(--grisOscuro);
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-top: 1.5rem;
+}
+
+/* Equipos */
+/* EXTEND */
+.descripcion .equipos__article--precio, .descripcion .equipos__article--descr, .descripcion h2, .descripcion .descuento {
+  text-align: center;
+  letter-spacing: 1.2px;
+}
+
+/* MIXIN */
+/* MAPA */
+.amd {
+  color: #bf1613;
+  font-family: "Lobster";
+}
+
+.intel {
+  color: #006BC4;
+  font-family: "Lobster";
+  box-shadow: 30px -30px 13px -28px rgba(0, 0, 0, 0.75);
+}
 
 /* Estilos para contenedor de articulos */
 .equipos {
-    margin-top: 12rem;
+  margin-top: 12rem;
+}
+.equipos .equipos__section {
+  background-color: var(--grisClaro);
+  overflow: hidden;
+}
+.equipos .equipos__section .equipos__article {
+  background-color: var(--blanco);
+  border: 1px solid var(--grisOscuro2);
+  max-width: 34rem;
+  height: 58rem;
+  margin: 3rem;
+  float: left;
+  /*-----------*/
+}
+.equipos .equipos__section .equipos__article:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  /* --------------- */
+  background: linear-gradient(to top, var(--naranjaUno) 0%, var(--naranjaDos) 20%);
+  /* --------------- */
+  /* --------------- */
+}
+.equipos .equipos__section .equipos__article:hover .equipos__article--precio > span {
+  display: none;
+}
+.equipos .equipos__section .equipos__article:hover .equipos__article--precio {
+  animation: rightText 300ms linear;
+  -webkit-animation: rightText 300ms linear;
+  color: white;
+  font-size: 4rem;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #000000;
+  margin: 2rem auto 1.8rem auto;
 }
 
-.equipos__section {
-    background-color: var(--grisClaro);
-    overflow: hidden;
+.descripcion .descuento {
+  color: var(--verdeClaro);
+  font-size: 2rem;
+  font-weight: 700;
+}
+.descripcion .equipos__article--descr {
+  color: var(--negro);
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 3rem;
+  margin-bottom: -1rem;
+}
+.descripcion .equipos__article--precio {
+  margin: 4rem auto 1.8rem auto;
+  font-size: 3rem;
+}
+.descripcion .equipos__article--precio span {
+  text-align: left;
+  font-size: 2rem;
+  color: var(--grisOscuro2);
+  /* para tachar precio */
+  text-decoration: line-through;
+  margin-right: 4.5rem;
+}
+.descripcion .equipos__article--btn {
+  color: var(--grisClaro);
+  font-weight: 700;
+  margin-left: 32%;
+  width: 10rem;
+  height: 3rem;
+  background-color: var(--celeste);
+  border-radius: 0.8rem;
+  -webkit-border-radius: 0.8rem;
+  -moz-border-radius: 0.8rem;
+  -ms-border-radius: 0.8rem;
+  -o-border-radius: 0.8rem;
+  /* ------------- */
+}
+.descripcion .equipos__article--btn:hover {
+  cursor: pointer;
+  background-color: var(--violeta);
 }
 
-
-.equipos__article {
-    background-color: var(--blanco);
-    border: 1px solid var(--grisOscuro2);
-    max-width: 34rem;
-    height: 58rem;
-    margin: 3rem;
-    float: left;
-    /*-----------*/
-}
-
-.equipos__article:hover {
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    /* --------------- */
-    background: linear-gradient(to top, var(--naranjaUno) 0%, var(--naranjaDos) 20%);
-}
-
-.equipos__article:hover .equipos__article--precio > span {
-    display: none;
-}
-
-
-.equipos__article:hover .equipos__article--precio {
-    animation: rightText 300ms linear;
-    -webkit-animation: rightText 300ms linear;
-    font-size: 4rem;
-    font-weight: bold;
-    color: white;
-    text-shadow: 2px 2px 4px #000000;
-    margin: 2rem auto 1.8rem auto
-}
-
-.descuento {
-    text-align: center;
-    color: var(--verdeClaro);
-    font-size: 2rem;
-    font-weight: 700;
-}
-
-.equipos__article div h2 {
-    text-align: center;
-}
-
-.equipos__article--descr {
-    text-align: center;
-    font-weight: 700;
-    color: var(--negro);
-    margin-bottom: -1rem;
-}
-
-
-.equipos__article--precio {
-    margin: 4rem auto 1.8rem auto;
-    text-align: center;
-    font-size: 3rem;
-}
-
-.equipos__article--precio span {
-    text-align: left;
-    font-size: 2rem;
-    color: var(--grisOscuro2);
-    /* para tachar precio */
-    text-decoration:line-through;
-    margin-right: 4.5rem;
-}
-
-.equipos__article--btn {
-    color: var(--grisClaro);
-    font-weight: 700;
-    margin-left: 32%;
-    width: 10rem;
-    height: 3rem;
-    background-color: var(--celeste);
-    border-radius: .8rem;
-    -webkit-border-radius: .8rem;
-    -moz-border-radius: .8rem;
-    -ms-border-radius: .8rem;
-    -o-border-radius: .8rem;
-}
-
-.equipos__article--btn:hover {
-    cursor: pointer;
-    background-color: var(--violeta);
-}
-
-
-
-/** RESPONSIVE **/
-
-
+/* Media Queries */
+/* 1400 */
 /* QUERIE PARA "1400" */
 @media screen and (max-width: 1400px) {
-    .main__contactos--padre {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-        width: 110rem;
-    }
+  .main__contactos--padre {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 110rem;
+  }
 }
-
-
+/* 1200 */
 /* QUERIE PARA "1200" */
 @media screen and (max-width: 1200px) {
-    .equipos__section--padre {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        align-items: center;
-    }
+  .equipos__section--padre {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 }
-
-
+/* 1110 */
 /* QUERIE PARA "1110" */
 @media screen and (max-width: 1110px) {
-    .main__contactos--padre {
-        width: 95rem;
-    }
+  .main__contactos--padre {
+    width: 95rem;
+  }
 }
-
-
+/* 960 */
 /* QUERIE PARA "960" */
 @media screen and (max-width: 960px) {
-    .main__contactos--padre {
-        width: 98%;
-    }
+  .main__contactos--padre {
+    width: 98%;
+  }
 
-    /* footer */
-    .footer__padre {
-        flex-wrap: wrap;
-        padding: 1rem;
-    }
+  /* footer */
+  .footer__padre {
+    flex-wrap: wrap;
+    padding: 1rem;
+  }
 }
-
-
+/* 850 */
 /* QUERIE PARA "850" */
 @media screen and (max-width: 850px) {
-    .main__contactos--padre {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        align-items: center;
-        justify-items: center
-    }
+  .main__contactos--padre {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+  }
 
-    .main__contactos--hijos:nth-child(1) {
-        grid-column: 1 / 3;
-        grid-row: 1 / 2;
-    }
-
-    .main__contactos--hijos:nth-child(2) {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-    }
-
-    .main__contactos--hijos:nth-child(3) {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-    }
+  .main__contactos--hijos:nth-child(1) {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .main__contactos--hijos:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .main__contactos--hijos:nth-child(3) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
 }
-
-
-
+/* 796 */
 /* QUERIE PARA "796" */
 @media screen and (max-width: 796px) {
-    .footer__padre {
-        justify-content: center;
-    }
+  .footer__padre {
+    justify-content: center;
+  }
 }
-
-
+/* 642 */
 /* QUERIE PARA "642" */
 @media screen and (max-width: 642px) {
-    .footer__padre {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, 1fr); 
-        align-items: center;
-        justify-items: center;
-        margin-left: 1rem;
-    }
+  .footer__padre {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+    margin-left: 1rem;
+  }
 
-    .footer__hijos:nth-child(2) {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }   
-    
-    .footer__hijos:nth-child(1) {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-    }    
+  .footer__hijos:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .footer__hijos:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
 }
-
-
+/* 480 */
 /* QUERIE PARA "480" */
 @media screen and (max-width: 480px) {
-    .main__contactos--padre {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 1fr);
-        height: 65rem;
-    }
+  .main__contactos--padre {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    height: 65rem;
+  }
 
-    .main__contactos--hijos:nth-child(1) {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }
+  .main__contactos--hijos:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .main__contactos--hijos:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .main__contactos--hijos:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+}
+/* Media Queries */
+/* 1400 */
+/* QUERIE PARA "1400" */
+@media screen and (max-width: 1400px) {
+  .main__contactos--padre {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 110rem;
+  }
+}
+/* 1110 */
+/* QUERIE PARA "1110" */
+@media screen and (max-width: 1110px) {
+  .main__contactos--padre {
+    width: 95rem;
+  }
+}
+/* 974 */
+/* QUERIE PARA "974" */
+@media screen and (max-width: 974px) {
+  .novedades__article--padre {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    height: 40rem;
+    align-items: center;
+    justify-items: center;
+  }
+}
+/* 960 */
+/* QUERIE PARA "960" */
+@media screen and (max-width: 960px) {
+  .main__contactos--padre {
+    width: 98%;
+  }
 
-    .main__contactos--hijos:nth-child(2) {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-    }
+  /* footer */
+  .footer__padre {
+    flex-wrap: wrap;
+    padding: 1rem;
+  }
+}
+/* 850 */
+/* QUERIE PARA "850" */
+@media screen and (max-width: 850px) {
+  .main__contactos--padre {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+  }
 
-    .main__contactos--hijos:nth-child(3) {
-        grid-column: 1 / 2;
-        grid-row: 3 / 4;
-    }
+  .main__contactos--hijos:nth-child(1) {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+
+  .main__contactos--hijos:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .main__contactos--hijos:nth-child(3) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+}
+/* 796 */
+/* QUERIE PARA "796" */
+@media screen and (max-width: 796px) {
+  .footer__padre {
+    justify-content: center;
+  }
+}
+/* 704 */
+/* QUERIE PARA "704" */
+@media screen and (max-width: 704px) {
+  .novedades__article--padre {
+    height: 45rem;
+  }
+}
+/* 642 */
+/* QUERIE PARA "642" */
+@media screen and (max-width: 642px) {
+  .footer__padre {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    justify-items: center;
+    margin-left: 1rem;
+  }
+
+  .footer__hijos:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .footer__hijos:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+}
+/* 480 */
+/* QUERIE PARA "480" */
+@media screen and (max-width: 480px) {
+  .main__contactos--padre {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    height: 65rem;
+  }
+
+  .main__contactos--hijos:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .main__contactos--hijos:nth-child(2) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .main__contactos--hijos:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+}
+/* 396 */
+/* QUERIE PARA "396" */
+@media screen and (max-width: 396px) {
+  .novedades__article--padre {
+    height: 48rem;
+  }
 }
 
+/*# sourceMappingURL=equipos.css.map */
