--- a/css/estilos.css
+++ b/css/estilos.css
@@ -70,8 +70,8 @@ html body .contenedor {
   padding: 0.2rem 0 0.2rem 0;
   margin: 0.4rem 0 0.4rem 0;
   text-align: center;
-  animation: blink 8s infinite linear;
-  -webkit-animation: blink 8s infinite linear;
+  animation: blink 3s infinite linear;
+  -webkit-animation: blink 3s infinite linear;
 }
 
 @keyframes blink {
@@ -151,6 +151,14 @@ html body .contenedor {
   letter-spacing: 3px;
   margin-top: 1rem;
   text-shadow: 0px 2px 1px #333;
+}
+
+.img-marcas {
+  padding: 0.8rem;
+}
+.img-marcas:hover {
+  animation: blink 8s infinite linear;
+  -webkit-animation: blink 8s infinite linear;
 }
 
 /* Estilos de Armar Pc */
